# elastic-cloud-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-format.yml  test.yml
elastic_cloud_agent/: __init__.py  agent.py  main.py
elastic_cloud_agent/spec_optimization/: __init__.py  lazy_loader.py  operation_filter.py  spec_minimizer.py  spec_registry.py  spec_splitter.py
elastic_cloud_agent/tools/: __init__.py  intent_aware_api_tool.py  openapi_tool.py  search.py  smart_openapi_toolkit.py
elastic_cloud_agent/utils/: __init__.py  config.py  openapi_utils.py
tests/: __init__.py  test_agent.py  test_chat_history.py  test_intent_aware_api_tool.py  test_lazy_loader.py  test_openapi_utils.py  test_operation_filter.py  test_smart_openapi_toolkit.py  test_spec_minimizer.py  test_spec_registry.py  test_spec_splitter.py
